--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -107,6 +107,10 @@
 	}
 	/* End Buttons */
 
+	.goals_details_table > thead > tr > th, .goals_details_table > tbody > tr > td {
+		font-size: 9px;
+	}
+
 	.subject-period {
 		font-size: 12px;
 	}
