Adjusting participants modal responsivity

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -700,6 +700,10 @@
 		height: 100%;
 	}
 
+	#chat-modal-info .modal-content.user_info {
+		overflow-y: scroll;
+	}
+
 	.talk_header {
 		height: 9%;
 	}
