--- a/chat/templates/chat/_profile.html
+++ b/chat/templates/chat/_profile.html
@@ -3,7 +3,7 @@
 {% is_online participant as status %}
 
 <div class="modal-dialog" role="document">
-	<div class="modal-content">
+	<div class="modal-content user_info">
 		<div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}"><span aria-hidden="true">&times;</span></button>
       	</div>
