Adjusting menu in nexus 10 display

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -90,6 +90,16 @@
 	/* End Bottom Menu */
 }
 
+@media(min-width: 800px) {
+	.navbar.hidden-sm {
+		display: inherit !important;
+	}
+
+	.navbar.hidden-md {
+		display: none;
+	}
+}
+
 @media(max-width: 768px) {
 	/* Buttons */
 	.visible-xs-block {
