Adding missing classes in list participants button

--- a/chat/templates/chat/list_participants.html
+++ b/chat/templates/chat/list_participants.html
@@ -46,7 +46,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </form>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12">
-                            <a href="{% url 'chat:participants_general' %}" class="pull-right btn btn-default btn-raised btn-md btn-mobile visible-xs-block visible-sm-block">{% trans 'List all participants' %}</a>
+                            <a href="{% url 'chat:participants_general' %}" class="pull-right btn btn-default btn-raised btn-md btn-mobile visible-xs-block visible-sm-block visible-md visible-lg">{% trans 'List all participants' %}</a>
                         </div>
     	    		</div>
         		</div>
