--- a/reports/templates/reports/create.html
+++ b/reports/templates/reports/create.html
@@ -21,7 +21,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     {{ block.super }}
     {% breadcrumb subject.category 'subjects:cat_view' subject.category.slug %}
     {% breadcrumb subject 'subjects:view' subject.slug %}
-    {% breadcrumb 'Analytics' '' %}
+    {% breadcrumb 'Interaction Data' '' %}
 {% endblock %}
 
 {% block javascript %}
@@ -32,30 +32,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 {% block content %}
 	
-	<div class="panel panel-info topic-panel">
-        <div class="panel-heading"  id="analytics-panel">
-        	<div class="row">
-                <div class="col-md-12 category-header">
-                    <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                        <span>{{ subject }} / {% trans "Analytics" %}</span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-        <div id="{{ subject.slug }}" class="panel-collapse panel-body in collapse subject-related-panel">
-            <div id="core-subjects-options-div">
-                <ul class="core-subjects-options report-menu-choice">
-                	<li class="active">
-                		{% trans "Interaction Data" %}
-                	</li>
-                	<li>
-                		{% trans "Report Card" %}
-                	</li>
-                	<li>
-                		{% trans "Participation" %}
-                	</li>
-                </ul>
-            </div>
+	<div class="card card-content">
+        <div class="card-body">
             {% include "reports/_form.html" %}
         </div>
     </div>
