--- a/banco_questoes/templates/banco_questoes/index.html
+++ b/banco_questoes/templates/banco_questoes/index.html
@@ -40,10 +40,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     
     <div class="row">
         <div class="col-md-9">
-            <form action="" method="GET" class="form-horizontal">
+            <form action="{% url 'questions_database:index' subject.slug %}" method="GET" class="form-horizontal">
                 <div class="form-group">
                     <div class="col-md-11 col-sm-10 col-xs-10">
-                        <input type="text" class="form-control" name="search" placeholder="{% trans 'Search for category...' %}" />
+                        <input type="text" class="form-control" name="search" placeholder="{% trans 'Search for category...' %}" value="{{ searched }}" />
                     </div>
                     <div class="col-md-1 col-sm-2 col-xs-2">
                         <button type="submit" class="btn btn-fab btn-fab-mini">
@@ -60,7 +60,19 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
     <div class="row">
         <div class="col-md-12 text-center">
-            <h5>{% trans "Number of registered questions: " %}{{ questions.count }}</h5>
+            <h5>{% trans "Number of registered questions: " %}{{ totals }}</h5>
         </div>
     </div>
+
+    {% if questions %}
+        {% for question in questions %}
+            {% include 'banco_questoes/_view.html' with question=question %}
+        {% endfor %}
+    {% endif %}
+
+     {% pagination request paginator page_obj %}    
+{% endblock %}
+
+{% block addtional_scripts %}
+    <script type="text/javascript" src="{% static 'js/question_database.js' %}"></script>
 {% endblock %}
