--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -59,6 +59,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 {% endif %}
                                 <li><a href="{% url 'subjects:update' subject.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
                                 <li><a href="{% url 'groups:index' subject.slug %}"><i class="fa fa-group fa-fw" aria-hidden="true"></i>{% trans 'Groups' %}</a></li>
+                                <li><a href="{% url 'questions_database:index' subject.slug %}"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i>{% trans 'Questions Database' %}</a></li>
                                 <li><a href="{% url 'subjects:backup' subject.slug %}"><i class="fa fa-database fa-fw" aria-hidden="true"></i>{% trans 'Backup' %}</a></li>
                                 <li><a href="{% url 'subjects:restore' subject.slug %}"><i class="fa fa-recycle fa-fw" aria-hidden="true"></i>{% trans 'Restore' %}</a></li>
                                 <li><a href="{% url 'subjects:reports:create_interaction' %}?subject_id={{subject.id}}"><i class="fa fa-bolt fa-fw" aria-hidden="true"></i>{% trans 'Interaction Data' %}</a></li>
