Adding questionary crud workflow

--- a/questionary/templates/questionary/create.html
+++ b/questionary/templates/questionary/create.html
@@ -22,6 +22,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% block javascript %}
 	{{block.super}}
 	<script type="text/javascript" src="{% static "js/bootstrap-tagsinput.js" %} "></script>
+	<script type="text/javascript" src="{% static "js/jquery.formset.js" %} "></script>
 {% endblock %}
 
 {% block breadcrumbs %}
