--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -751,7 +751,7 @@ a:focus {
 }
 /* end jPages */
 
-.notifies, .goalitems {
+.notifies, .goalitems, .specs {
     padding: 5px 20px;
     text-align: right;
     margin-bottom: 10px;
@@ -765,7 +765,7 @@ a:focus {
     font-weight: 700;
 }
 
-.notifies a.delete-row, .goalitems a.delete-row {
+.notifies a.delete-row, .goalitems a.delete-row, .specs a.delete-row {
     padding: 5px 20px;
     font-size: 12px;
     border: none;
