--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -541,10 +541,10 @@ input#mobile_menu_btn:checked + .navbar-menu-btn
 
 /* === Notifies === */
 
-.notifies, .goalitems 
+.notifies, .goalitems, .specs 
     border: 1px solid #EEEEEE
 
-.notifies a.delete-row, .goalitems a.delete-row
+.notifies a.delete-row, .goalitems a.delete-row, .specs a.delete-row
     -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12)
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12)
     background-color: #EEE
