Adding questionary generation per user and possibility to answer it

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -784,6 +784,17 @@ a.add-row
         .correct_answer
             color: green
 
+/* === Questionary === */
+.questionary
+    .header_info
+        color: #999
+
+    .correct_answer
+        color: green
+
+    .wrong_answer
+        color: red
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
