--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1664,7 +1664,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 /* End Chat */
 
-/* Qusestions Databse */
+/* Questions Databse */
 .alternative-panel h4 {
     width: 100%;
     overflow: hidden;
@@ -1681,4 +1681,9 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 .alternative-panel h4 a:hover {
     text-decoration: none;
+}
+
+/* Questionary */
+.questionary {
+    margin-top: 20px;
 }
